# picture_chat

./: .gitignore  README.md  manage.py  pyproject.toml  run.sh
back/chat/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
back/chat/migrations/: 0002_message.py  0005_alter_message_image.py  0006_message_created_at_room_created_at.py
back/chat/templates/: login.html
back/picture_chat/: asgi.py  settings.py  wsgi.py
chat/: models.py  views.py
chat/migrations/: 0001_initial.py  0003_room_name_alter_message_image.py  0004_alter_message_image.py
chat/templates/: register.html
front/: .env.example  index.html  package-lock.json  package.json
front/src/: App.svelte  Chat.svelte  Editor.svelte  Login.svelte  Menubar.svelte  MessageList.svelte  MessageViewer.svelte  PrivateRoute.svelte  RedirectIfLoggedRoute.svelte  Room.svelte  main.js  style.css
picture_chat/: .env.example  config.py  main.py  urls.py  websockets.py  yoyo.ini
picture_chat/actions/: get_all_messages.py  post_message.py  room_crud.py
picture_chat/authentication/: authentication.py
picture_chat/data/: messages.json  users.json
picture_chat/entities/: message.py  room.py  user.py
picture_chat/migrations/: 20230604_01_C2cdy-create-initial-database-schema.sql  20230604_02_wFx8Z-add-room-tables.sql  20230604_03_AFuXU-add-password-for-users.sql
picture_chat/repositories/: connection_manager.py  message_repository.py  message_repository_json.py  room_repository.py  user_repository.py  user_repository_json.py
picture_chat/serializers/: message_serializer.py
(+8 files in other folders)
