[tool.poetry]
name = "picture_chat"
version = "0.1.0"
description = ""
authors = ["SamuelLorrain <samuel.lorrain@gmail.com>"]
readme = "README.md"
packages = [{include = "picture_chat"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
yoyo-migrations = "^9.0.0"
pyjwt = "^2.7.0"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
